# hardware_design

./: TRIAC_DIAC.doc
geda_ngspice/: ac用法  ac用法~  overview_installation  overview_installation~  tran用法
geda_ngspice/ngspice-doc-26/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  manual.lyx
geda_ngspice/ngspice-doc-26/Tables/: ASRC.lyx  BJT.lyx  BJT2.lyx  BSIM1.lyx  BSIM2.lyx  CCCS.lyx  CCVS.lyx  Capacitor.lyx  CplLines.lyx  Inductor.lyx  Isource.lyx  LTRA.lyx  MOS1.lyx  MOS2.lyx  MOS3.lyx  MOS6.lyx  MOS9.lyx  Mutual.lyx  Resistor.lyx  Tranline.lyx  TransLine.lyx  URC.lyx  VBIC.lyx  VCCS.lyx  VCVS.lyx  Vsource.lyx
geda_ngspice/sample code/: op_amp.net
